--- a/Bem_ti_Quiz/Css/Style.css
+++ b/Bem_ti_Quiz/Css/Style.css
@@ -229,12 +229,12 @@ input {
     text-align: center;
     font-size: 40px;
 
-width: 200px;
-height: 70px;
-left: calc(50% - 209px/2 - 1.5px);
-top: 600px;
-box-shadow: 0px 8px 0px #CDCDCD;
-border-radius: 30px;
+    width: 200px;
+    height: 70px;
+    left: calc(50% - 209px/2 - 1.5px);
+    top: 600px;
+    box-shadow: 0px 8px 0px #CDCDCD;
+    border-radius: 30px;
 
 }
 
@@ -244,19 +244,69 @@ border-radius: 30px;
 }
 
 .Texto {
-position: absolute;
-width: 596px;
-height: 55px;
-left: calc(55% - 596px/2);
+    position: absolute;
+    width: 596px;
+    height: 55px;
+    left: calc(55% - 596px/2);
 
-font-family: 'Be Vietnam Pro';
-font-style: italic;
-font-weight: 700;
-font-size: 20px;
-line-height: 25px;
-display: flex;
-align-items: center;
-text-align: center;
+    font-family: 'Be Vietnam Pro';
+    font-style: italic;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    display: flex;
+    align-items: center;
+    text-align: center;
 
-color: #5E5E5E;
+    color: #5E5E5E;
+}
+
+
+.rodape {
+    width: 15%;
+    height: 74px;
+    background: #FFF;
+    border-radius: 0 0 20px 0;
+    box-shadow: 0 8px 0 0 #CDCDCD;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.texto-rodape {
+    font-family: 'Be Vietnam Pro', sans-serif;
+    color: #000;
+    text-align: center;
+    font-size: 41px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+
+}
+
+.container {
+    margin-top: 20px;
+}
+
+.quadro-quiz {
+    width: 100%;
+    max-width: 571px;
+    height: 333px;
+    background: rgba(255, 255, 255, 0.88);
+    border: 2px solid #777;
+    border-radius: 20px;
+    box-shadow: 0 8px 0 0 #777, 4px 13px 4px 0 rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.texto-pergunta {
+    font-family: 'Inter', sans-serif;
+    font-size: 23px;
+    font-weight: 700;
+    color: #000;
+    text-align: center;
+    max-width: 476px;
+    line-height: 1.5;
 }
