--- a/Bem_ti_Quiz/Css/Style.css
+++ b/Bem_ti_Quiz/Css/Style.css
@@ -299,14 +299,17 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px;
+    margin: 10px;
+    
 }
 
 .texto-pergunta {
-    font-family: 'Inter', sans-serif;
-    font-size: 23px;
-    font-weight: 700;
-    color: #000;
+    color: #303030;
     text-align: center;
-    max-width: 476px;
-    line-height: 1.5;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
