--- a/Bem_ti_Quiz/css/estilo.css
+++ b/Bem_ti_Quiz/css/estilo.css
@@ -10,25 +10,123 @@ body {
     background-attachment: fixed;
 }
 
+
+.accordion {
+            background-color: #72d959;
+            filter: drop-shadow(0px 8px 0px #4c913b) drop-shadow(4px 10px 4px rgba(0, 0, 0, 0.25));
+            color: #000; 
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            outline: none;
+            font-size: 25px;
+            transition: 0.1s;
+            border-radius: 25px;
+            margin-bottom: 10px; 
+            text-align: center;
+            font-family:"Be Vietnam Pro", sans-serif;
+
+        }
+
+        .active, .accordion:hover {
+            background-color: #00ff00; 
+        }
+
+        .panel {
+            padding: 15px;
+            display: none;
+            background-color: #90ee90;
+            filter: drop-shadow(0px 8px 0px #4c913b) drop-shadow(4px 10px 4px rgba(0, 0, 0, 0.25));
+            overflow: hidden;
+            border-radius: 25px;
+            margin:15px;
+            transition: 1s;
+
+        }
+
+        .panel p {
+            margin: 0; 
+        }
+        
 @media screen and (max-width: 768px) {
     body {
         background-position: center top; 
     }
 
-    .container-fluid {
-        width: 90%; 
+    div.position-absolute {
+        position: relative !important;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+    }
+
+    .position-absolute .container-fluid {
+        width: 90%;
+        border-radius: 50px;
+        margin: 20px auto;
+    }
+
+    #logo-login {
+        display: none;
+    }
+
+    #capricho {
+        position: absolute;
     }
 
     .container-sm {
         width: 90%; 
     }
 
+    .botoes-home {
+        position: relative !important;
+        margin-bottom: 30px;
+    }
+
     .btn-warning {
         width: 100%; 
     }
+
+    .label-home {
+     margin: 0 auto;   
+    }
+
+    .respostas-container .row-cols-2 {
+        display: flex !important;
+    }
+
+    .respostas-container .row-cols-2>* {
+        width: 100% !important;
+    }
+
+    .container-placar .col-6 {
+        width: 100% !important;
+    }
 }
 
+.displaycenter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+.col {
+    display: flex !important;
+    min-width: 240px !important;
+}
+
+.col-home {
+    flex: 1 0 0%;
+    user-select: none;
+    transition-duration: 200ms;
+}
+
+.col-home:hover {
+    transform: translateY(-10px) scale(1.1);
+}
 
 .figureBK {
     position: fixed;
@@ -38,6 +136,13 @@ body {
     height: 100%;
     z-index: -1;
 
+}
+
+.botoes-home {
+    position: absolute;
+    top: 0;
+    right: 0;
+    user-select: none;
 }
 
 img.increase-size {
@@ -53,10 +158,11 @@ img.increase-size {
     background-color: #fff;
     border-radius: 50px 0px 0px 50px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 50%;
+    padding: 50px;
     width: 500px;
-    padding-left: 2pc;
-    padding-right: 2pc;
+    height: 100vh;
+    padding-left: 1pc;
+    padding-right: 1pc;
 }
 
 .container-sm {
@@ -66,6 +172,20 @@ img.increase-size {
     height: 528px;
     border-radius: 25px;
     padding: 20px;
+}
+
+.container-fluid form {
+    width: 90%;
+}
+
+#curiosidade-alert #imagem-aleatoria {
+            max-width: 300px;
+            max-height: 200px;
+            border-radius: 10%;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+            margin: 10px auto;
+            display: block;
+    
 }
 
 input[type="email"],
@@ -79,8 +199,6 @@ input[type="password"] {
     color: #ccc;
     border: none;
     outline: none;
-    padding-right: 150px;
-
 }
 
 .btn-warning {
@@ -140,7 +258,7 @@ input {
 /* Home */
 
 .container-md {
-    max-width: 30%;
+    max-width: 420px;
     margin-top: 20px;
     padding: 15px;
     background-color: #f8f9fa;
@@ -166,8 +284,13 @@ input {
     color: #ffffff; 
 }
 
+.container-md img {
+    user-select: none;
+}
+
 
 .btn-logout {
+    user-select: none;
     flex: 1;
     margin: 10px;
     min-width: 0;
@@ -293,8 +416,6 @@ input {
 }
 
 .Texto {
-    position: absolute;
-    width: 596px;
     height: 55px;
     left: calc(55% - 596px/2);
     font-family: 'Be Vietnam Pro';
@@ -302,14 +423,16 @@ input {
     font-weight: 700;
     font-size: 20px;
     line-height: 25px;
-    display: flex;
-    align-items: center;
-    text-align: center;
     color: #5E5E5E;
 }
 
+.resposta {
+    height: auto !important;
+}
+
 .rodape {
-    width: 15%;
+    width: auto;
+    max-width: 220px;
     height: 74px;
     background: #FFF;
     border-radius: 0 0 20px 0;
@@ -331,10 +454,33 @@ input {
     margin-top: 20px;
 }
 
+.row-cols-2 {
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 10px;
+    max-width: 800px !important;
+    width: auto !important;
+    margin: 0;
+    padding: 0;
+
+}
+
+.row-cols-2>* {
+    width: auto !important;
+}
+
+#quiz-container {
+    margin-bottom: 30px;
+}
+
+.quadro {
+    width: 100% !important;
+}
+
 .quadro-quiz {
     width: 100%;
     max-width: 571px;
-    height: 333px;
     background: rgba(255, 255, 255, 0.88);
     border: 2px solid #777;
     border-radius: 20px;
@@ -342,7 +488,7 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 15px;
     margin: 10px;
 }
 
@@ -353,3 +499,20 @@ input {
     font-size: 30px;
     font-weight: bold;
 }
+
+#curiosidade-alert {
+    width: 90% !important;
+    max-width: 600px !important;
+}
+
+#curiosidade-alert p {
+    overflow-y: scroll !important;
+    max-height: 300px !important;
+}
+
+.label-home {
+    user-select: none;
+}
+
+
+
